# recomender

./: .gitignore  README.MD  models.py  pyproject.toml  rating_movies.json  read_data.py  recommender.py  requirements.txt  start-chroma.sh
movie_recommender/: __init__.py  api.py  apps.py
movie_recommender/background_api/: api.py  interface.py
movie_recommender/celery_queue/: worker.py
movie_recommender/init_data/: fill_db.py
movie_recommender/python_queue/: __init__.py  _queue.py  job.py
movie_recommender/querying/: __init__.py  chroma.py  querying_and_validation.py
movie_recommender/recommenders/: __init__.py  combined_recommender.py  content_based_recommender.py  user_based_recommender.py
movie_recommender/templates/: flask_user_layout.html  home.html  missing_recommendations.html  movies.html  recommendations.html  recommendations_loading.html
notebooks/: crawl_data.ipynb  get_images.ipynb  manual_queue.ipynb  optimize_weights.ipynb  test.ipynb
recommender/: __init__.py  api.py  apps.py  chroma.py  fill_db.py  sql_models.py  utils.py
recommender/celery_queue/: worker.py
recommender/init_data/: crawl_imdb.py  fill_db.py
recommender/python_queue/: _queue.py  job.py
recommender/querying/: chroma.py  querying_and_validation.py  sql_models.py
recommender/recommenders/: combined_recommender.py  content_based_recommender.py  user_based_recommender.py
recommender/static/css/: style.css
recommender/templates/: flask_user_layout.html  movies.html  recommendations.html  recommendations_loading.html
static/css/: style.css
templates/: movies.html
(+1 files in other folders)
