[build-system]
requires = ["setuptools>=40.6.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["recommender"]

[project]
name = "recommender"
version = "0.1.0"
description = "A short description of your project."
authors = [{name = "Felix Hammer", email = "fhammer@uos.de"}]
readme = "README.md"
requires-python = "==3.10.*"